menambahkan BAB III bagian pengumpulan kebutuhan

--- a/laporan_prototype.html
+++ b/laporan_prototype.html
@@ -29,7 +29,7 @@
 					<ol>3. Data yang diolah meliputi data karyawan, data pelanggan dan data transaksi </ol>
 				</ul> <br>
 				
-				<br><h1 style="font-size: 15px;" align="center"> <br> BAB II <br>LANDASAN TEORI</h1>
+				<br><h1 style="font-size: 15px;" align="center"> <br> BAB II <br><br>LANDASAN TEORI</h1>
 				<ul style="text-align: justify;"> 
 				<p><strong>2.1 Metode Prototype <br><br></strong> Metode Prototype merupakan satu metode dalam pengembangan perangkat lunak, metode ini merupakan suatu paradigma baru dalam pembuatan atau pengembangan perangkat lunak. Metode ini adalah evolusi dalam dunia pengembangan atau pembuatan perangkat lunak, metode ini juga merevolusi metode pengembangan atau pembuatan perangkat lunak yang lama, yaitu sistem sekuensial yang biasa dikenal dengan nama Metode Waterfall. Dalam metode prototype/prototyping, perangkat lunak yang dihasilkan kemudian dipresentikan kepada klien, dan klien tersebut diberikan kesempatan untuk memberikan masukan dan kritikan, sehingga software yang dihasilkan sesuai dengan kebutuhan dan keinginan pelanggan. Perubahan perangkat lunak dapat dilakukan berkali-kali hingga dicapai kesepakatan bentuk dari software yang akan dikembangkan.</p>
 				<p>Tahapan metode prototype adalah sebagai berikut :</p>
@@ -60,9 +60,28 @@
 				<br><p><strong>2.3 Kasir</strong><br><br>Kasir adalah orang yang bertugas untuk mengurusi dan menyimpan hasil pembayaran terutama uang, dan memasukkannya ke dalam mesin kasir. Kasir dapat ditemukan di berbagai tempat, terutama di tempat-tempat yang memiliki titik penjualan seperti di dalam toko. Kasir juga dapat merujuk pada orang yang menghimpun, menghitung, dan mengirimkan uang kepada nasabah di suatu kantor cabang sebuah bank. Istilah tersebut juga disebut sebagai teller bank. Tempat kasir menerima dan menyimpan uang hasil penjualan disebut kasa.</p>
 				<br><p><strong>2.4.   Web</strong><br><br>Situs web (bahasa Inggris: website) adalah sekumpulan halaman web yang saling berhubungan yang umumnya berada pada peladen yang sama berisikan kumpulan informasi yang disediakan secara perorangan, kelompok, atau organisasi. Sebuah situs web biasanya ditempatkan setidaknya pada sebuah server web yang dapat diakses melalui jaringan seperti Internet, ataupun jaringan area lokal (LAN) melalui alamat Internet yang dikenali sebagai URL. Gabungan atas semua situs yang dapat diakses publik di Internet disebut pula sebagai World Wide Web atau lebih dikenal dengan singkatan WWW. Meskipun setidaknya halaman beranda situs Internet umumnya dapat diakses publik secara bebas, pada praktiknya tidak semua situs memberikan kebebasan bagi publik untuk mengaksesnya, beberapa situs web mewajibkan pengunjung untuk melakukan pendaftaran sebagai anggota, atau bahkan meminta pembayaran untuk dapat menjadi aggota untuk dapat mengakses isi yang terdapat dalam situs web tersebut, misalnya situs-situs yang menampilkan situs-situs berita, layanan surel (e-mail), dan lain-lain. 
 					Pembatasan-pembatasan ini umumnya dilakukan karena alasan keamanan, menghormati privasi, atau karena tujuan komersial tertentu</p>
-			</p>
+			</p><br>
+			<br><h1 style="font-size: 15px;" align="center"> <br> BAB III <br> <br> PENGUMPULAN KEBUTUHAN & MEMBANGUN PROTOTYPE</h1>
+			<ul style="text-align: justify;" >
+			<br><p><strong>3. Pengumpulan Kebutuhan </strong></p>
+			<ul><p><strong> 3.1	Wawancara </strong><br><br>Wawancara dilakukan untuk mengumpulkan infomasi secara lengkap seperti prosedur aturan bisnis dan data-data yang dibutuhkan. Berdasarkan wawancara tersebut, diperoleh beberapa data yakni data karyawan dan data pelanggan.  
+				Wawancara dilakukan dengan pemilik laundry dan karyawan yang bertugas. </p>
+			<p><strong>3.2 	Aturan Bisnis (Bisnis Rule)</strong><br><br>Berikut adalah aturan bisnis yang diterapkan pada Laundry Clean Me :</p>
+			<ul><p><strong>a. Prosedur</strong></p>
+			<p>proses pemesanan jasa laundry yaitu pelanggan datang ke Laundry Clean Me untuk memesan jasa laundry dan Admin akan mencatat data pelanggan secara manual di buku antrian. Kemudian pelanggan akan mendapatkan nomor antrian, lalu menunggu proses layanan dan setelah selesai pelanggan akan melakukan pembayaran kepada Admin setelah menyerahkan nomor antrian</p>
+				<p>Berikut adalah activiry diagram prosedur pemesanan jasa Laundry Clean Me</p>
+				<img src="activity_diagram1.png" alt="">
+		</ul>
+		<ul><p><strong>b. kelemahan</strong></p>
+		<p>Laundry Clean Me setiap harinya dapat menerima pemesanan jasa layanan sebanyak lebih dari seratus pelanggan. Namun, pelayanan yang digunakan masih menggunakan pelayanan kasir dengan transaksi manual, dan admin masih mencatat data-data pelanggan di buku antrian dengan menulisaknnya secara manual sehingga menyulitkan admin dalam melayani pelanggan. Laporan pelanggan dan transaksi juga masih belum teratur dan masih banyak data yang kurang ataupun salah sehingga menyulitkan pemilik untuk memantau perkembangan usaha laundrynya</p>
+		</ul>
+		<p><strong>3.3 Aplikasi Kasir Berbasis Web</strong><br><br>Maka untuk mengatasi masalah tersebut dibuatlah sebuah aplikasi kasir berbasis web yang dapat membantu admin untuk mencatat data pelanggan dan melakukan transaksi. Aplikasi pengelolaan layanan kasir adalah sebuah aplikasi yang digunakan untuk memudahkan seorang kasir pada sebuah layanan laundry dalam melakukan kegiatan transaksi dan pembuatan laporan pendapatan. Sehingga dengan adanya aplikasi ini dapat memudahkan proses pembuatan laporan pendapatan dengan cepat, tepat dan akurat, memberikan pelayanan yang profesional kepada pelanggan dan meminimalisir kesalahan-kesalahan yang mungkin terjadi</p>
+		<p>Berikut adalah Activity Diagram Aplikasi Kasir Berbasis Web</p>
+		<img src="activity_diagram2.png" alt="">
+	</ul>
 
-			</ul>
+
+			
 			</td>
 		</tr>
 
