--- a/index.html
+++ b/index.html
@@ -2,10 +2,43 @@
 <html>
 <head>
 	<meta charset="utf-8">
-	<title>ini index</title>
+	<title>laporan metode prototype</title>
+	<link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
-	<h1>ini adalah index</h1>
+	<!-- sampul -->
+	<table>
+		<tr height="1000px">
+			<td align="center">
+				<h1>LAPORAN APLIKASI PENGELOLAAN LAYANAN KASIR LAUNDRY<br> BERBASIS WEB DENGAN MENGGUNAKAN METODE PROTOTYPE</h1><br>
+				<img src="assets/image/42.UTY.png" width="325px" height="325px"><br>
+				<p><strong>KELOMPOK 2:<br><br>5200411179 MUHAMMAD SYAFIQ SETIAWAN<br><br>5200411222 PRAMANA ANDI PRAYOGA<br><br>5200411340 FAJAR DWI CAHYO<br><br>5200411346 BRILIANA WIJDANI ARWA<br><br>5200411428 ARGENTA MAULANA ISNAN<br><br><br><br>METODOLOGI DESAIN PERANGKAT LUNAK PRAKTIK VIII<br><br>PROGRAM STUDI INFORMATIKA<br><br>FAKULTAS SAINS & TEKNOLOGI<br><br>UNIVERSITAS TEKNOLOGI YOGYAKARTA<br><br>TAHUN 2021/2022</strong></p>
+			</td>
+		</tr>
+	</table>
+	
+	<!--Pendahuluan -->
+	<table>
+		<tr height="1000px">
+			<td align="center">
+				<h1>BAB I<br><br>PENDAHULUAN</h1><br>
+				<ul style="text-align: justify;margin-right: 60px; margin-right: 35px;margin-left: auto;">
+					<p ><strong>1. Latar Belakang<br></p>
+					<p style="text-indent: 0.5in;"></strong> Perkembangan dunia di era millennium ini sangat pesat, terutama di bidang teknologi informasi. Tingkat kecepatan dan ketepatan informasi merupakan hal yang sangat besar oleh karena itu harus didukung teknologi informasi yang memadai. Usaha laundry merupakan sebuah bisnis yang berkaitan dengan pelayanan jasa pencucian pakaian dengan mesin cuci maupun mesin pengering otomatis dan cairan pembersih serta pewangi khusus. Bisnis ini menjamur di kota-kota besar yang banyak terdapat rumah kost dan rumah kontrakan, dimana penyewa kost atau kontrakan tidak sempat atau tidak bisa melakukan cuci dan setrika baju sendiri dikarenakan kesibukan sebagai mahasiswa maupun pekerja.<br></p>
+					<p style="text-indent: 0.5in;">Laundry Clean Me merupakan sebuah tempat usaha laundry rumahan yang sedang berkembang di wilayah Kecamatan Melati, Kabupaten Mengkudu, Jawa Tengah. Laundry Clean Me setiap harinya dapat menerima pemesanan jasa layanan sebanyak lebih dari seratus pelanggan. Namun, pelayanan yang digunakan masih menggunakan pelayanan kasir dengan transaksi manual sehingga menyulitkan karyawan dalam melayani pelanggan. Laporan pelanggan dan transaksi juga masih belum teratur dan masih banyak data yang kurang ataupun salah sehingga menyulitkan pemilik untuk memantau perkembangan usaha laundrynya.<br></p>
+					<p style="text-indent: 0.5in;">Berdasarkan permasalahan tersebut maka akan dibangun sebuah aplikasi berbasis web sebagai media untuk memudahkan kasir dalam melayani pelanggan. Sistem ini akan mengolah data pelanggan dan data transaksi dengan menggunakan MySQL. Sistem ini dibangun dengan menggunakan Bahasa pemrograman PHP, HTML, JavaScript, dan CSS. Hasil dari penelitian ini sistem dapat membantu dalam proses pendataan pelanggan, proses transaksi dan pembuatan laporan.<br><br></p>
+				</ul>
+				<ul style="margin-left: 50px;">
+					<p style="text-align: justify;margin-right: 60px; margin-right: 35px;margin-left: auto;"><strong>1.1. Rumusan Masalah</strong><br><br>Berdasarkan uraian diatas maka permasalahan yang akan di selesaikan adalah bagaimana membangun sebuah sistem yang dapat membantu kasir untuk lebih mudah dalam mencatat data pelanggan dan dalam proses transaksi.<br><br><strong>1.2. Batasan Masalah</strong><br><br>Pada proyek kerja praktik ini kami membatasi permasalahan dalam membangun sistem kasir laundry berbasis web. Batasan masalah tersebut meliputi:<br></p>
+				</ul>
+				<p style="margin-right: 80px;">1. Hak akses sistem ini hanya terbatas pada admin, karyawan dan pemilik usaha laundry</p>
+				<p style="margin-left: 20px;">2. Sistem dibangun menggunakan Bahasa pemrograman HTML, JavaScript, CSS dan database MySQL</p>
+				<p style="margin-right: 140px;">3. Data yang diolah meliputi data karyawan, data pelanggan dan data transaksi</p>
+			</td>
+		</tr>
+	</table>
+
+
 
 </body>
 </html>
