--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
 		</tr>
 	</table>
 	
-	<!--Pendahuluan -->
+	<!-- Pendahuluan -->
 	<table>
-		<tr height="1000px">
+		<tr height="900px">
 			<td align="center">
 				<h1>BAB I<br><br>PENDAHULUAN</h1><br>
 				<ul style="text-align: justify;margin-right: 60px; margin-right: 35px;margin-left: auto;">
@@ -38,7 +38,100 @@
 		</tr>
 	</table>
 
+	<!-- Landasan Teori -->
+	<table>
+		<tr height="1300px">
+			<td align="center">
+				<h1>BAB II<br><br>LANDASAN TEORI</h1><br>
+				<ul style="text-align: justify;margin-right: 60px; margin-right: 35px;margin-left: auto;">
+					<p><strong>2.1 Metode Prototype<br></p>
+					<p style="text-indent: 0.5in;"></strong> Metode Prototype merupakan satu metode dalam pengembangan perangkat lunak, metode ini merupakan suatu paradigma baru dalam pembuatan atau pengembangan perangkat lunak. Metode ini adalah evolusi dalam dunia pengembangan atau pembuatan perangkat lunak, metode ini juga merevolusi metode pengembangan atau pembuatan perangkat lunak yang lama, yaitu sistem sekuensial yang biasa dikenal dengan nama Metode Waterfall. Dalam metode prototype/prototyping, perangkat lunak yang dihasilkan kemudian dipresentikan kepada klien, dan klien tersebut diberikan kesempatan untuk memberikan masukan dan kritikan, sehingga software yang dihasilkan sesuai dengan kebutuhan dan keinginan pelanggan. Perubahan perangkat lunak dapat dilakukan berkali-kali hingga dicapai kesepakatan bentuk dari software yang akan dikembangkan<br></p>
+					<p>Tahapan metode prototype adalah sebagai berikut :<br></p>
+					<img src="assets/image/img_prototype.png" alt="image prototype">
+					<p >1. Pengumpulan Kebutuhan</p>
+					<p>klien dan pengembang bersama-sama mendefinisikan format software, mengidentifikasikan kebutuhan dan sistem yang dibuat.</p>
+					<p >2. Membangun Prototype / Prototyping</p>
+					<p>Membangun prototyping dengan membuat perancangan sementara yang berfokus penyajian kepada pelanggan (contoh membuat input dan format output).</p>
+					<p>3. Evaluasi Prototyping</p>
+					<p>Tahap ini dilakukan oleh klien, apakah prototyping yang dibangun, sudah sesuai dengan keinginan dan kebutuhan pelanggan atau belum. Jika tidak sesuai, prototyping akan direvisi dengan mengulangi langkah-langkah sebelumnya. Tapi jika sudah sesuai, maka langkah selanjutnya akan dilaksanakan.</p>
+					<p >4. Mengkodekan Sistem</p>
+					<p>Di tahap ini prototyping yang sudah disepakati diterjemahkan ke dalam bahasa pemrograman yang sesuai.</p>
+					<p >5. Menguji Sistem</p>
+					<p>Setelah sistem sudah menjadi suatu software yang siap pakai, maka software harus di tes dahulu sebelum digunakan. Hal ini bertujuan untuk meminimalisirkan kesalahan software tersebut. Pengujian dilakukan dengan Black Box, White box, Pengjian arsitektur, Basis path dan lain-lain.</p>
+					<p >6. Evaluasi Sistem</p>
+					<p>Di tahap ini klien mengevaluasi sistem yang sudah dibuat sudah sesuai yang diinginkan. Jika tidak, maka pengembang akan mengulangi langkah ke 4 dan 5. Tapi jika iya, maka langkah ke 7 akan dilakukan.</p>
+					<p >7. Menggunakan Sistem</p>
+					<p>Software yang telah diuji dan diterima klien siap digunakan</p><br>
+					<p><strong>2.2 Metode Laundry<br></p>
+					<p style="text-indent: 0.5in;"></strong>Menilik dari kata dasarnya, laundry adalah kata benda yang mengacu pada tindakan mencuci pakaian, tempat mencuci pakaian, atau pakaian yang telah dicuci. Kegiatan ini juga bisa dihubungkan pada kegiatan mencuci bahan tekstil atau tempat untuk mencuci bahan tekstil. Jadi kata laundry menghubungkan kegiatan mencuci dan tempat mencuci pada waktu dan lokasi yang bersamaan. Sedangkan usaha laundry adalah sebuah usaha di bidang jasa yang menawarkan cuci pakaian dan sejenisnya yang umum digunakan oleh konsumen.</p><br>
+					<p><strong>2.3 Kasir<br></p>
+					<p style="text-indent: 0.5in;"></strong>Kasir adalah orang yang bertugas untuk mengurusi dan menyimpan hasil pembayaran terutama uang, dan memasukkannya ke dalam mesin kasir. Kasir dapat ditemukan di berbagai tempat, terutama di tempat-tempat yang memiliki titik penjualan seperti di dalam toko. Kasir juga dapat merujuk pada orang yang menghimpun, menghitung, dan mengirimkan uang kepada nasabah di suatu kantor cabang sebuah bank. Istilah tersebut juga disebut sebagai teller bank. Tempat kasir menerima dan menyimpan uang hasil penjualan disebut kasa.</p><br>
+					<p><strong>2.3 Web<br></p>
+					<p style="text-indent: 0.5in;"></strong>Situs web (bahasa Inggris: website) adalah sekumpulan halaman web yang saling berhubungan yang umumnya berada pada peladen yang sama berisikan kumpulan informasi yang disediakan secara perorangan, kelompok, atau organisasi. Sebuah situs web biasanya ditempatkan setidaknya pada sebuah server web yang dapat diakses melalui jaringan seperti Internet, ataupun jaringan area lokal (LAN) melalui alamat Internet yang dikenali sebagai URL. Gabungan atas semua situs yang dapat diakses publik di Internet disebut pula sebagai World Wide Web atau lebih dikenal dengan singkatan WWW. Meskipun setidaknya halaman beranda situs Internet umumnya dapat diakses publik secara bebas, pada praktiknya tidak semua situs memberikan kebebasan bagi publik untuk mengaksesnya, beberapa situs web mewajibkan pengunjung untuk melakukan pendaftaran sebagai anggota, atau bahkan meminta pembayaran untuk dapat menjadi aggota untuk dapat mengakses isi yang terdapat dalam situs web tersebut, misalnya situs-situs yang menampilkan situs-situs berita, layanan surel (e-mail), dan lain-lain. Pembatasan-pembatasan ini umumnya dilakukan karena alasan keamanan, menghormati privasi, atau karena tujuan komersial tertentu.<br></p>
+				</ul>	
+			</td>	
+		</tr>
+	</table>
 
+	<!-- PENGUMPULAN KEBUTUHAN & MEMBANGUN PROTOTYPE -->
+	<table>
+		<tr height="2000px">
+			<td align="center">
+				<h1>BAB III<br><br>PENGUMPULAN KEBUTUHAN & MEMBANGUN PROTOTYPE</h1><br>
+				<ul style="text-align: justify;margin-right: 60px; margin-right: 35px;margin-left: auto;">
+					<p ><strong>3. Pengumpulan Kebutuhan</strong><br></p>
+				</ul>
+				<ul style="text-align: justify;margin-right: 60px; margin-right: 35px;margin-left: auto;">
+					<p><strong>3.1 Wawancara</strong><br>
+					<p style="text-indent: 0.5in;"> Wawancara dilakukan untuk mengumpulkan infomasi secara lengkap seperti prosedur aturan bisnis dan data-data yang dibutuhkan. Berdasarkan wawancara tersebut, diperoleh beberapa data yakni data karyawan dan data pelanggan.  Wawancara dilakukan dengan pemilik laundry dan karyawan yang bertugas.<br></p>
+					<br><p ><strong>3.2 Aturan Bisnis (Bisnis Rule)</strong><br>
+					<p>Berikut adalah aturan bisnis yang diterapkan pada Laundry Clean Me<br></p>
+					<p>a. Prosedur<br></p>
+					<p style="text-indent: 0.5in;">proses pemesanan jasa laundry yaitu pelanggan datang ke Laundry Clean Me untuk memesan jasa laundry dan Admin akan mencatat data pelanggan secara manual di buku antrian. Kemudian pelanggan akan mendapatkan nomor antrian, lalu menunggu proses layanan dan setelah selesai pelanggan akan melakukan pembayaran kepada Admin setelah menyerahkan nomor antrian.<br><br>Berikut adalah activiry diagram prosedur pemesanan jasa Laundry Clean Me</p>
+					<img src="assets/image/activity_diagram1.png" alt="diagram 1">
+					<p>b. Kelemahan<br></p>
+					<p style="text-indent: 0.5in;"> Laundry Clean Me setiap harinya dapat menerima pemesanan jasa layanan sebanyak lebih dari seratus pelanggan. Namun, pelayanan yang digunakan masih menggunakan pelayanan kasir dengan transaksi manual, dan admin masih mencatat data-data pelanggan di buku antrian dengan menulisaknnya secara manual sehingga menyulitkan admin dalam melayani pelanggan. Laporan pelanggan dan transaksi juga masih belum teratur dan masih banyak data yang kurang ataupun salah sehingga menyulitkan pemilik untuk memantau perkembangan usaha laundrynya.</p>
+					<br><p><strong>3.3 Aplikasi Kasir Berbasis Web</strong><br></p>
+					<p style="text-indent: 0.5in;">Maka untuk mengatasi masalah tersebut dibuatlah sebuah aplikasi kasir berbasis web yang dapat membantu admin untuk mencatat data pelanggan dan melakukan transaksi. Aplikasi pengelolaan layanan kasir adalah sebuah aplikasi yang digunakan untuk memudahkan seorang kasir pada sebuah layanan laundry dalam melakukan kegiatan transaksi dan pembuatan laporan pendapatan. Sehingga dengan adanya aplikasi ini dapat memudahkan proses pembuatan laporan pendapatan dengan cepat, tepat dan akurat, memberikan pelayanan yang profesional kepada pelanggan dan meminimalisir kesalahan-kesalahan yang mungkin terjadi.</p>
+					<img src="assets/image/activity_diagram2.png" alt="diagram 1">
+					<br><p><strong>3.4 Analisis Kebutuhan</strong><br></p>
+					<p>1. Analisis Kebutuhan Fungsional</p>
+					<p style="text-indent: 0.5in;">Aplikasi pengelolaan layanan kasir laundry adalah sebuah aplikasi yang digunakan untuk memudahkan seorang kasir pada sebuah layanan laundry dalam melakukan kegiatan transaksi dan pembuatan laporan pendapatan.  Karyawan dapat melakukan peroses transaksi dengan pelangan, menambahkan pelanggan kedalam daftar pemesanan jasa, dan mencatat barang yang ingin di laundry.<br><br>Proses kegiatan Admin</p>
+					<p style="text-indent: 0.5in;">• Admin dapat melakukan registrasi dan login</p>
+					<p style="text-indent: 0.5in;">• Sistem memberikan hak akses kepada admin untuk mengelola Data Master</p>
+					<p style="text-indent: 0.5in;">• Admin dapat menambahkan data pelanggan</p>
+					<p style="text-indent: 0.5in;">• Admin dapat mengelola data transaksi yang dilakukan dengan pelanggan</p>
+					<p style="text-indent: 0.5in;">• Admin dapat mengelola laporan </p>
+					<p>2. Analisis Kebutuhan Non Fungsional</p>
+					<p>Perangkat lunak yang digunakan untuk membangun aplikasi :</p>
+					<p style="text-indent: 0.5in;">Visual Studio Code : Text Editor</p>
+					<p style="text-indent: 0.5in;">Xampp &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp: Penyimpanan Sistem dan Database</p>
+					<p style="text-indent: 0.5in;">Figma &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp: Desain Interface</p>
+					<p style="text-indent: 0.5in;">Google &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp: Browser untuk menampilakan aplikasi</p>
+					<br><p><strong>3.5 Design</strong><br></p>
+					<p>1. Design Sistem</p>
+					<p style="text-indent: 0.5in;">Design sistem terdiri dari pemodelan sistem dan alur kerja sistem dengan Diagram Konteks dan Diagram Alir Data (DAD). Pemodelan basis data dengan Entity Relationship Diagram (ERD).</p>
+					<p>• Diagram Jenjang</p>
+					<p style="text-indent: 0.5in;">Diagram jenjang merupakan diagram yang menggambarkan struktur suatu sistem berupa suatu bagan berjenjang yang menggambarkan semua proses yang ada di sistem </p>
+					<img src="assets/image/diagram_jenjang.png" alt="diagram jenjang" width="600px" height="auto">
+					<p>• Diagram Konteks</p>
+					<p style="text-indent: 0.5in;">Diagram konteks merupakan diagram yang terdiri dari suatu proses dan menggambarkan ruang lingkup suatu sistem. Diagram ini merupakan bagian dari level tertinggi diagram alir data (DAD) yang menggambarkan seluruh input kesuaru sistem. Diagram konteks akan memberi gambaran mengenai keseluruhan sistem. Dalam diagram konteks hanya terdapat satu proses saja.</p>
+					<img src="assets/image/diagram_konteks.png" alt="diagram konteks" width="600px" height="auto">
+					<p>• Diagram Alir data (DAD)</p>
+					<p style="text-indent: 0.5in;">Diagram Alir Data merupakan suatu diagram yang menggunakan notasi-notasi untuk mneggambarkan arus dari data sistem, yang penggunaannya dapat membantu untuk memahami sistem secara logika, terstruktur dan jelas.</p>
+					<p>• Diagram Alir data (DAD) Level 1</p>
+					<img src="assets/image/dad_level1.png" alt="lvl 1" width="600px" height="auto">
+					<p>• Diagram Alir data (DAD) Level 2 Master Data</p>
+					<img src="assets/image/dad_level2masterdata.png" alt="lvl 2 master data" width="600px" height="auto">
+					<p>• Diagram Alir data (DAD) Level 2 Transaksi</p>
+					<img src="assets/image/dad_level2transaksi.png" alt="lvl 2 transaksi" width="600px" height="auto">
+					<p>• Entity Relationship Diagram (ERD)</p>
+					<p style="text-indent: 0.5in;">Entity Relationship Diagram (ERD) adalah diagram yang dapat mengambarkan relasi antar entitas yang digunakan dalam pembuatan sistem.</p>
+					<img src="assets/image/erd.png" alt="diagram jenjang" width="600px" height="auto">
+				</ul>
+			</td>
+		</tr>
+	</table>
 
 </body>
 </html>
