--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 	<table>
 		<tr height="1300px">
 			<td align="center">
-				<h1>BAB II<br><br>LANDASAN TEORI</h1><br>
+				<br><h1>BAB II<br><br>LANDASAN TEORI</h1><br>
 				<ul style="text-align: justify;margin-right: 60px; margin-right: 35px;margin-left: auto;">
 					<p><strong>2.1 Metode Prototype<br></p>
 					<p style="text-indent: 0.5in;"></strong> Metode Prototype merupakan satu metode dalam pengembangan perangkat lunak, metode ini merupakan suatu paradigma baru dalam pembuatan atau pengembangan perangkat lunak. Metode ini adalah evolusi dalam dunia pengembangan atau pembuatan perangkat lunak, metode ini juga merevolusi metode pengembangan atau pembuatan perangkat lunak yang lama, yaitu sistem sekuensial yang biasa dikenal dengan nama Metode Waterfall. Dalam metode prototype/prototyping, perangkat lunak yang dihasilkan kemudian dipresentikan kepada klien, dan klien tersebut diberikan kesempatan untuk memberikan masukan dan kritikan, sehingga software yang dihasilkan sesuai dengan kebutuhan dan keinginan pelanggan. Perubahan perangkat lunak dapat dilakukan berkali-kali hingga dicapai kesepakatan bentuk dari software yang akan dikembangkan<br></p>
@@ -77,7 +77,7 @@
 	<table>
 		<tr height="2000px">
 			<td align="center">
-				<h1>BAB III<br><br>PENGUMPULAN KEBUTUHAN & MEMBANGUN PROTOTYPE</h1><br>
+				<br><h1>BAB III<br><br>PENGUMPULAN KEBUTUHAN & MEMBANGUN PROTOTYPE</h1><br>
 				<ul style="text-align: justify;margin-right: 60px; margin-right: 35px;margin-left: auto;">
 					<p ><strong>3. Pengumpulan Kebutuhan</strong><br></p>
 				</ul>
@@ -128,6 +128,34 @@
 					<p>• Entity Relationship Diagram (ERD)</p>
 					<p style="text-indent: 0.5in;">Entity Relationship Diagram (ERD) adalah diagram yang dapat mengambarkan relasi antar entitas yang digunakan dalam pembuatan sistem.</p>
 					<img src="assets/image/erd.png" alt="diagram jenjang" width="600px" height="auto">
+					<br><p>2. Design Database</p>
+					<p>• Tabel Pelanggan</p>
+					<img src="assets/image/tabel_pelanggan.png" alt="tabel pelanggan" width="600px" height="auto" border="1 px solid Black">
+					<p>• Tabel Transaksi</p>
+					<img src="assets/image/tabel_transaksi.png" alt="tabel transaksi" width="600px" height="auto" border="1 px solid Black">
+					<p>• Tabel Admin</p>
+					<img src="assets/image/tabel_admin.png" alt="tabel admin" width="600px" height="auto" border="1 px solid Black">
+					<p>• Relasi Tabel</p>
+					<img src="assets/image/relasi tabel.png" alt="relasi tabel" width="600px" height="auto" border="1 px solid Black"><br>
+					<br><p>3. Design Aplikasi</p>
+					<p>• Tampilan Form Login</p>
+					<p style="text-indent: 0.5in;">Pada form login, admin akan memasukan Username dan Password yang telah terdaftar didalam database. Jika login berhasil maka admin dapat mengakses aplikasi untuk menjalankan fitur-fiturnya.</p>
+					<img src="assets/image/tampilan_login.png" alt="login" width="600px" height="auto" border="1 px solid Black">
+					<p>• Tampilan Dashboard</p>
+					<p style="text-indent: 0.5in;">Pada halaman dasboard akan ditampilkan data admin.</p>
+					<img src="assets/image/tampilan_dashboard.png" alt="dashboard" width="600px" height="auto" border="1 px solid Black">
+					<p>• Tampilan Form Antrian</p>
+					<p style="text-indent: 0.5in;">Pada form antrian Admin dapat menginputkan data pelanggan yang berisi nama pelanggan, alamat, telepon, status, tanggal, berat barang yang ingin di laundry dan total. Untuk menyimpan data tersebut admin dapat mengklik tombol tambah dibagian bawah form.</p>
+					<img src="assets/image/tampilan_antrian.png" alt="antrian" width="600px" height="auto" border="1 px solid Black">
+					<p>• Tampilan Data Pelanggan</p>
+					<p style="text-indent: 0.5in;">Pada halaman data pelanggan akan ditampilkan tabel data pelanggan yang berisi kolom nama, alamat, telp</p>
+					<img src="assets/image/tampilan_datapelanggan.png" alt="pelanggan" width="600px" height="auto" border="1 px solid Black">
+					<p>• Tampilan Transaksi</p>
+					<p style="text-indent: 0.5in;">pada halaman transaksi akan ditampilkan tabel transaksi yang berisi nama pelanggan, status, tanggal, berat, dan total.</p>
+					<img src="assets/image/tampilan_transaksi.png" alt="transaksi" width="600px" height="auto" border="1 px solid Black">
+					<p>• Tampilan Data Laporan</p>
+					<p style="text-indent: 0.5in;">Pada halaman laporan akan ditampilkan laporan pemesanan.</p>
+					<img src="assets/image/tampilan_datalaporan.png" alt="laporan" width="600px" height="auto" border="1 px solid Black">
 				</ul>
 			</td>
 		</tr>
